@@ -107,7 +107,8 @@ public class FDR_Display {
 							} else if (c.equals("SS")) {
 								gameOver = false;
 								Runtime.getRuntime().exec("pkill omxplayer");
-								Runtime.getRuntime().exec("bash -c \"omxplayer -o local /home/pi/Finger-Dance-Revolution/Song.wav\"");
+								ProcessBuilder pb = new ProcessBuilder("bash", "-c", "omxplayer -r -o hdmi myVideoFile.mp4");
+								Process process = pb.start();
 							}
 						}
 					} catch (Exception e) {
